fix: make the tags jump to the next row (#260)

--- a/src/style.less
+++ b/src/style.less
@@ -6159,6 +6159,7 @@ table th {
     .tags-wrapper {
         display: flex;
         align-items: center;
+        flex-wrap: wrap;
         gap: 10px;
     }
 
